syntax = "proto3";

import "google/protobuf/empty.proto";

package search;

service Search {
  rpc Search(SearchRequest) returns (stream SearchResponse);
  rpc Health(google.protobuf.Empty) returns (Healthiness);
}

message Healthiness {
  bool healthy = 1;
}

message SearchRequest {
  string term = 1;
}

message SearchResponse {
  oneof result {
    User user_result = 1;
    Class class_result = 2;
    Package package_result = 3;
  }
}

message User {
  bytes id = 1;
  string username = 2;
  string name = 3;
  ImageSourceSet avatar = 4;
}

message ImageSourceSet {
  string large = 1;
  string medium = 2;
  string small = 3;
}

message Class {
  string qualified_name = 1;
}

message Package {
  string qualified_name = 1;
  string latest_version = 2;
}
